# ai-rag-qdrant-pipline

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
rag_pipelines/: __init__.py  assets.py  definitions.py  resources.py  sensors.py
scripts/: ingest_cli.py  smoke_test.py  ui.py
scripts/learn/: chunking_walkthrough.py  generation_walkthrough.py  qdrant_walkthrough.py  voyage_walkthrough.py
src/: config.py
src/api/: main.py
src/generation/: llm.py
src/ingest/: chunker.py  loaders.py  pipeline.py
src/retrieval/: embeddings.py  store.py
