[project]
name = "rag-qdrant"
version = "0.1.0"
description = "End-to-end RAG with Qdrant, Voyage AI, and Claude"
requires-python = ">=3.11"
dependencies = [
    # Core API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",  # required by FastAPI for UploadFile / multipart forms
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    # LangChain stack
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",     # PyPDFLoader and other loaders
    "langchain-text-splitters>=0.3.2",
    "langchain-qdrant>=0.2.0",        # QdrantVectorStore integration
    "langchain-voyageai>=0.1.4",      # VoyageAIEmbeddings
    "langchain-anthropic>=0.3.0",     # ChatAnthropic
    # The LangChain integrations import these at module scope but don't always
    # declare them as required deps — pin them explicitly so `uv sync` keeps them.
    "qdrant-client>=1.12.0",
    "voyageai>=0.3.0",
    "anthropic>=0.39.0",
    "pypdf>=5.1.0",
    "tiktoken>=0.8.0",  # used by langchain TokenTextSplitter (in chunking walkthrough)
    # UI
    "streamlit>=1.40.0",
    "httpx>=0.27.2",
    # CLI / utility
    "typer>=0.13.0",
    "rich>=13.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]
# Orchestration extras — only needed when running the Dagster ingestion pipeline.
# Install with: uv sync --group dagster
dagster = [
    "dagster>=1.9.0",
    "dagster-webserver>=1.9.0",
    "azure-storage-blob>=12.23.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.dagster]
module_name = "rag_pipelines.definitions"
code_location_name = "rag_qdrant_ingest"
